Added tests, forms and form support for Def Entries

--- a/test/fixtures/flexifield_def_entries.yml
+++ b/test/fixtures/flexifield_def_entries.yml
@@ -3,10 +3,12 @@ ffde1:
   flexifield_def_id: 1
   flexifield_name: ffs_01
   flexifield_alias: excerpt
-  ordering: 1
+  flexifield_tooltip: Enter excerpt
+  flexifield_order: 1
   
 ffde2:
   flexifield_def_id: 1
   flexifield_name: ffs_02
   flexifield_alias: references
-  ordering: 2
+  flexifield_tooltip: Enter references
+  flexifield_order: 2
